style.css
body {
    font-family: Arial, sans-serif;
    text-align: center;
}

h2 {
    margin: 20px;
}

table {
    margin: 0 auto;
    border-collapse: collapse;
    width: auto;
    height: auto;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

th, td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
    user-select: none;
}

th {
    background-color: #f2f2f2;
    text-align: center;
    vertical-align: middle;
}

#errorMsg {
    color: red;
    font-weight: bold;
    margin-top: 10px;
}

th {
    background-color: #f2f2f2;
}

tr:nth-child(even) {
    background-color: #f2f2f2;
}

tr:hover {
    background-color: #ddd;
}

button {
    margin: 10px;
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    background-color: #4CAF50;
    border: none;
    color: white;
    border-radius: 5px;
    transition: background-color 0.3s;
}

button:hover {
    background-color: #45a049;
}

.footer {
    position: fixed;
    bottom: 1%;
    left: 0;
    right: 0;
    font-size: 14px;
    color: #555;
}

